A bunch of minor CSS updates to fix spacing issues and some problems on smaller viewports.

--- a/waters-aem-frontend/src/styles/filters.scss
+++ b/waters-aem-frontend/src/styles/filters.scss
@@ -236,14 +236,14 @@
         display: flex;
         flex-wrap: wrap;
         margin-top: $space-xs;
-        margin-bottom: $space-s;
+        margin-bottom: $space-xs;
 
         a {
             @include font-small;
             line-height: $line-height-text;
             display: block;
             float: left;
-            padding: ($space-xxxs - .05em) $space-xs $space-xxxs $space-l;
+            padding: ($space-xxxs - .05em) $space-xs ($space-xxxs + .05em) $space-l;
             margin: ($space-m + 0.15em) $space-xxs $space-m 0;
             text-decoration: none;
             background-color: $color-gray-10;
@@ -255,13 +255,13 @@
             }
 
             @include mobile {
-                padding: ($space-xxs - .2em) $space-s ($space-xxs - .2em) $space-l;
+                padding: ($space-xxs - .2em) $space-s ($space-xxxs + .06em) $space-l;
                 margin: 0 $space-xxs $space-xxs 0;
             }
 
             svg {
                 position: absolute;
-                top: 9px;
+                top: 8px;
                 left: 10px;
                 width: $icon-s;
                 height: $icon-s;
@@ -274,7 +274,7 @@
                     margin: 0;
                 }
                 @include mobile {
-                    top: 7px;
+                    top: 9px;
                 }
             }
             &:hover {
@@ -289,12 +289,12 @@
             }
         }
         @include tablet-and-under {
-            margin-top: $space-l;
+            margin-top: 0;
             margin-bottom: 0;
         }
     }
     &__emptytags {
-        height: 0.5em;
+        height: 2em;
 
         @include tablet-and-under {
             height: 0;
